--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "history": "^4.4.1",
+    "material-ui": "^0.16.4",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:4000/"
 }
